<resources>
    <string name="app_name" translatable="false">Dictionary</string>
    <string name="app_login" translatable="false">Login</string>
    <string name="app_password" translatable="false">Password</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="tag_of_eng">English</string>
    <string name="tag_of_rus">Russian</string>
    <string name="tag_of_chin">Chinese</string>
    <string name="enter_text">Enter the term</string>
    <string name="first_translate_eng" translatable="false">Translation</string>
    <string name="first_translate_rus" translatable="false">Перевод</string>
    <string name="first_translate_сhin" translatable="false">翻译</string>
    <string name="transcrip_сhin" translatable="false">转录/转录</string>
    <string name="error_no_such_word">No such term</string>
    <string name="error_no_term">Input field is empty</string>
    <string name="rcv_tag_ru" translatable="false">Ru:</string>
    <string name="rcv_tag_en" translatable="false">En:</string>
    <string name="rcv_tag_ch" translatable="false">Ch:</string>
    <string name="editor_name" translatable="false">Editor</string>
    <string name="home" translatable="false">Home</string>
    <string name="editors" translatable="false">Editors</string>
    <string name="words" translatable="false">Words</string>
    <string name="error_login">Invalid login or password</string>


    <string-array name="languages_arr">
        <item>English</item>
        <item>Русский</item>
        <item>中文</item>
    </string-array>
</resources>