<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".screens.MainAdminFragment">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="@drawable/spinner_back"
        android:entries="@array/languages_arr"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_back"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <LinearLayout
            android:id="@+id/linearLayoutc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <TextView
                android:id="@+id/tvChinTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/tag_of_chin"
                android:textColor="@color/back_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFirstChinTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/first_translate_сhin"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvTranscrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/transcrip_сhin"
                android:textColor="@color/back_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toStartOf="@+id/spacex"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <TextView
                android:id="@+id/tvRusTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/tag_of_rus"
                android:textColor="@color/back_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFirstRusTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/first_translate_rus"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="16dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:id="@+id/spacex"
            android:layout_width="16dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toStartOf="@+id/spacex"
            app:layout_constraintStart_toEndOf="@+id/space"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutx" />

        <LinearLayout
            android:id="@+id/linearLayoutx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvEngTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/tag_of_eng"
                android:textColor="@color/back_gray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvFirstEngTrans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rokkitt_regular"
                android:text="@string/first_translate_eng"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spacex"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edWord"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_back"
        android:ems="10"
        android:fontFamily="@font/rokkitt_regular"
        android:hint="@string/enter_text"
        android:imeOptions="actionSearch"
        android:inputType="textAutoCorrect|textAutoComplete"
        android:paddingStart="16dp"
        android:cursorVisible="false"
        android:textColor="@color/back_gray"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <TextView
        android:id="@+id/tvErrorNSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_such_word"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/error"
        android:visibility="gone"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edWord" />

    <TextView
        android:id="@+id/tvErrorNT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_no_term"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/error"
        android:visibility="gone"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edWord" />

</androidx.constraintlayout.widget.ConstraintLayout>